fixes (wrap title & footer)

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -15,6 +15,10 @@
   flex-direction: row;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 .center {
   justify-content: center;
 }
